Fixes chat sidebar from overlappinng layout
fixes #26

--- a/client/components/happychat/style.scss
+++ b/client/components/happychat/style.scss
@@ -358,12 +358,12 @@
 	}
 
 	// add space in the main column for the docked sidebar
-	.has-chat .wp-content {
+	.has-chat .layout__content {
 		padding: 32px 304px;
 	}
 
 	// add space in the editor for the docked sidebar
-	.has-chat.is-group-editor .wp-content {
+	.has-chat.is-group-editor .layout__content {
 		padding: 0 304px 0 0;
 	}
 
